--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
 					<div class="row row-bottom-padded-sm">
 						<div class="col-md-12">
 							<figure>
-								<img src="images/profile_img.png" alt="Free HTML5 Wesbite Template by FreeHTML5.co">
+								<img src="images/profile_img1.png" alt="Free HTML5 Wesbite Template by FreeHTML5.co">
 							</figure>
 							<h1>Sylvia Yvonne</h1>
 							<p>Born and raised in <a href="#">Brooklyn</a>. Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. Separated they live in Bookmarksgrove right at the coast of the <a href="#">Semantics</a>, a large language ocean. A small river named Duden flows by their place and supplies it with the necessary regelialia. </p>
