--- a/index.html
+++ b/index.html
@@ -52,6 +52,14 @@
 	<!-- Theme style  -->
 	<link rel="stylesheet" href="css/style.css">
 
+	<style type="text/css">
+		.myprofile{
+			border-radius: 50%;
+			height: 280px;
+			width: 280px;
+		}
+	</style>>
+
 	<!-- Modernizr JS -->
 	<script src="js/modernizr-2.6.2.min.js"></script>
 	<!-- FOR IE9 below -->
@@ -75,7 +83,7 @@
 					<div class="row row-bottom-padded-sm">
 						<div class="col-md-12">
 							<figure>
-								<img src="images/profile_img1.png" alt="Sylvia Yvonne Prifile Picture">
+								<img class="myprofile" src="images/profile_img1.png" alt="Sylvia Yvonne Prifile Picture">
 							</figure>
 							<h1>Sylvia Yvonne</h1>
 							<p>Born and raised in <a href="#">Brooklyn</a>. Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. Separated they live in Bookmarksgrove right at the coast of the <a href="#">Semantics</a>, a large language ocean. A small river named Duden flows by their place and supplies it with the necessary regelialia. </p>
